/*
 *  Copyright (c) 2022, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *
 */

syntax = "proto3";

package discovery.service.apkmgt;

option go_package = "github.com/wso2/apk/adapter/discovery/service/apkmgt";
option java_package = "org.wso2.apk.enforcer.discovery.service.apkmgt";
option java_outer_classname = "ApiDsProto";
option java_multiple_files = false;
option java_generic_services = true;

service APIService {
    rpc createAPI(API) returns (Response);
    rpc updateAPI(API) returns (Response);
    rpc deleteAPI(API) returns (Response);
}

message API {
    string uuid = 1;
    string provider = 2;
    string version = 3;
    string name = 4;
    string basePath = 5;
    string type = 6;
    string organizationId = 7;
    string createdBy = 8;
    string createdTime = 9;
    string updatedBy = 10;
    string updatedTime = 11;
    string definition = 12;
    repeated string transports = 13; 
    repeated Resource resources = 16;
    CorsConfig corsConfig = 17;
}

message CorsConfig {
    bool corsConfigurationEnabled = 1;
    repeated string accessControlAllowOrigins = 2;
    bool accessControlAllowCredentials = 3;
    repeated string accessControlAllowHeaders = 4;
    repeated string accessControlAllowMethods = 5;
}

message Resource {
    string path = 1;
    string verb = 2;
    repeated Authentication authentications = 3;  
    repeated Scope scopes = 4;
    OperationPolicies operationPolicies = 6;
    repeated QueryParam queryParams = 7;
    repeated string hostname = 8;
}

message OperationPolicies {}

message QueryParam {
    string name = 1;
    string value = 2;
}

message Scope {
    string name = 1;
    string displayName = 2;
    string description = 3;
    repeated string bindings = 4;
}

message Authentication {
    string type = 1;
    string iss = 2;
    string aud = 3;
    string jwksUri = 4;
    repeated Credential credentialList = 5;
}

message Credential {
    string username = 1;
    string password = 2;
}

message Response {
    bool result = 1;
}
